# soulbeet

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  beets_config.yaml  css.sh  docker-compose.yml  package-lock.json  package.json
.github/workflows/: image-build-push.yml  release.yml
api/: Cargo.toml  build.rs
api/migrations/: 20240523000000_init.sql  20250201000000_user_settings.sql
api/src/: auth.rs  config.rs  db.rs  globals.rs  lib.rs  services.rs
api/src/models/: app_config.rs  folder.rs  mod.rs  user.rs  user_settings.rs
api/src/server_fns/: auth.rs  download.rs  folder.rs  guard.rs  mod.rs  search.rs  settings.rs  system.rs
api/src/server_fns/download/: import.rs  mod.rs  monitor.rs  process.rs
desktop/: Cargo.toml
desktop/src/: main.rs
lib/shared/: Cargo.toml
lib/soulbeet/: Cargo.toml
lib/soulful/: Cargo.toml
mobile/: Cargo.toml
mobile/src/: main.rs
scripts/: bump_version.sh
ui/: Cargo.toml
ui/src/: auth.rs  layout.rs  lib.rs  navbar.rs  settings_context.rs
ui/src/components/: button.rs  cover_art.rs  mod.rs  modal.rs  status.rs
ui/src/components/album/: footer.rs  header.rs  mod.rs  track_item.rs  track_list.rs
ui/src/components/downloads/: item.rs  mod.rs
ui/src/components/login/: mod.rs
ui/src/components/search/: album.rs  download_results.rs  mod.rs  search_type_toggle.rs  track.rs
ui/src/components/settings/: app_config.rs  folder_manager.rs  mod.rs  preferences.rs  user_manager.rs
web/: Cargo.toml
web/assets/: input.css  tailwind.css
web/src/: auth.rs  main.rs  websocket.rs
(+27 files in other folders)
