[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
api = { workspace = true }
shared = { workspace = true }
web-sys = { version = "0.3.83", features = ["Storage", "Window", "Location"] }
serde_json = "1.0.145"

[features]
default = []
server = ["api/server"]
